# ChangeLog for games-strategy/daneel-ai
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Jan 2009; Aaron Mavrinac <mavrinac@gmail.com> daneel-ai-0.0.1.ebuild:
  Added daneel-ai.xml to files

*daneel-ai-0.0.1 (21 Jan 2009)

  21 Jan 2009; Aaron Mavrinac <mavrinac@gmail.com> daneel-ai-0.0.1.ebuild: 
  Initial import