@@ -1,6 +1,5 @@
 AUX daneel-ai 39 RMD160 05ce631da57ca70db705f4392be946c552bbb2e1 SHA1 963f9e002358ecc2879b266bee10e717657fabb1 SHA256 d38023d0f258efd1915f149812de790ddb3c0eaabdee331bdb48c25ad4f36b74
-AUX daneel-ai.xml 467 RMD160 153ab6125f4400f0fa5fd79cfc6e09a0bc675b09 SHA1 9015bc79e96aef997ea32f3716d8087c6e03d917 SHA256 b8a53cdfe0adee5a6db5bccebbe6cadb66a9dd083ede6479f6659690d8b8d764
-DIST daneel-ai-0.0.1.tar.bz2 26635 RMD160 de289a4e070fb7fff5bf710f7e5e4cef68f3e3b3 SHA1 71e0217fe1486a0fa36bdcc6db2f0944ed6fa0f6 SHA256 4ef24c673d83fe6f2209a67ae88c70c52badf552a22fbe409585f6e42a313377
-EBUILD daneel-ai-0.0.1.ebuild 1369 RMD160 6a002afd3caf2e269c4445c4a7f607079a13ad2c SHA1 3e583a0d19e5139ed9cdcfea2e07ca99c3c69c5c SHA256 5b29e39abd098ef0cb9fb34ded38991e85bdf9c49aa168e482fc214a1b85b012
-MISC ChangeLog 357 RMD160 dd18970cd8d4a66026111f1edf50ed60d37d4f38 SHA1 578f0903538eb9ab2e5186496c8b9599a62eb54d SHA256 464f0fdf691885e0fa95f5dab4581d79824c515efbbdba063f9af05e54f3ca06
+DIST daneel-ai-0.0.2.tar.bz2 18341 RMD160 241c8aaa739fc8e4c4768301e897c62e2a66e34e SHA1 f7951468a558344c4f2cbee03acddaae2e38419c SHA256 58c6e2571ef26fd461f2ac606df6fc24bf03f9aa3a0a39e0ec8146cf49f23f4b
+EBUILD daneel-ai-0.0.2.ebuild 1357 RMD160 5f97eb383c529498d8567eac19ccecadfebf39fe SHA1 65a025439cf4b1e64bd117b188ecf9e1c1c86daf SHA256 9cea609b67b6115d85dfcb8dba7a9e53a00ccda432cd87f56ff1d5e3d2f3e9cf
+MISC ChangeLog 480 RMD160 5cfbbf72b03636ba4f3f434330264d75d9fe1eff SHA1 2ae6c6db286d62a3000d0c4fdab2ebbbd5893203 SHA256 a780cd3da8579413bf4d0fc199e7cfd7abb58a2b723ddba16d66c276a30c69fd
 MISC metadata.xml 334 RMD160 8096c25a9bf6294c2237efdf06ba6c3fd7d86d00 SHA1 d0d088119890d7e1a770910f6ec48a87f687a276 SHA256 87ff1e2c137900f3f39644b37aa3639241e02c56284e55ab64cbf6388b03c91f
