@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*daneel-ai-0.0.2 (20 Feb 2009)
+
+  20 Feb 2009; Aaron Mavrinac <mavrinac@gmail.com> daneel-ai-0.0.2.ebuild:
+  Version bump
+
   30 Jan 2009; Aaron Mavrinac <mavrinac@gmail.com> daneel-ai-0.0.1.ebuild:
   Added daneel-ai.xml to files
 
